@@ -1,3 +1,11 @@
+2008-10-27  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/tracker/totem-tracker-widget.c
+	(totem_tracker_widget_init):
+	* src/plugins/youtube/youtube.ui: Harmonise the appearance of the
+	YouTube and Local Search sidebars, making them both look like the
+	latter. (Closes: #558118)
+
 2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* data/playlist.ui:
